--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<!--  Licensed to the .NET Foundation under one or more agreements. -->
-<!-- The .NET Foundation licenses this file to you under the MIT license. -->
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>HelloTriangleWasm</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script type="module" src="./main.js"></script>
+  </head>
 
-<head>
-  <title>HelloTriangleWasm</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script type='module' src="./main.js"></script>
-</head>
-
-<body>
-  <span id="out"></span>
-</body>
-
+  <body>
+    <div>
+      <canvas id="glCanvas" width="400" height="400"></canvas>
+    </div>
+    <span id="out"></span>
+  </body>
 </html>
